# agentic-ai-mastery

./: .gitignore  README.md
agentic-dataops/: .env.example  MCP_TUTORIAL.md  PHASE_2_ROBUSTNESS.md  README.md  agent_dataops_poc.py  agent_memory.json  eval_output.txt  pyproject.toml  revenue_analysis_output.csv
agentic-dataops/clean/: revenue_by_region.csv  revenue_by_region.parquet
agentic-dataops/data/: regions.csv  sales.csv
agentic-dataops/recipes/: daily_revenue_by_region.yaml
agentic-dataops/reports/: 20251224_220834_Daily_Revenue_by_Region_-_Agent_Run.md  20260106_164117_MCP_Request-_Calculate_total_revenue_by_region.md
agentic-dataops/rules/: dq_daily_revenue.json
agentic-dataops/scripts/: debug_mcp.py  demo_client.py  demo_run.sh  generate_recipe.py  mcp_client_demo.py  mcp_server_verifier.py  run_evals.py  verify_mcp_load.py
agentic-dataops/src/agent/: agent_recipe_generator.py  cli.py  core.py  llm_client.py  memory.py  orchestrator.py  pyspark_translator.py  reviewer_agent.py
agentic-dataops/src/mcp_server/: databricks_tools.py  main.py  resources.py  tools.py
agentic-dataops/tests/: conftest.py  test_agent_recipe_generator.py  test_dq.py  test_generate_and_run.py  test_orchestrator.py  test_profile.py  test_reviewer.py  test_transform.py  verify_databricks_mock.py  verify_databricks_real.py  verify_reviewer_live.py
agentic-dataops/tests/evals/: golden_dataset.json
